kubernetes/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  labels:
    run: capstone
  name: capstone-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      run: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        run: capstone
    spec:
      containers:
      - image: siqili/capstone:0.1
        name: capstone
