kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siqili/capstone: 0.1 .
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
      # nodePort: 31234
      name: tcp-5000
      protocol: TCP
